Fix issue with alignment of content on wide scrn

--- a/stack-link/pages/index.module.scss
+++ b/stack-link/pages/index.module.scss
@@ -18,6 +18,7 @@
 
     .BodyFlex {
       box-sizing: border-box;
+      width: 100%;
       aspect-ratio: 1/1.5;
       max-height: 100%;
       overflow-y: auto;
